feat: add most viewed books feature and other changes
