# src/routes/books.ts
@@ -9,6 +9,7 @@ import {
   getMoreBooksAuthors,
   getOneBooks,
   getPathUrlBooks,
+  getMostViewedBooks,
   postBooks,
   putBooks,
   deleteBooks,
@@ -26,6 +27,7 @@ router.get('/books/options', getAllOptions);
 router.get('/books/more-books', getBooksRandom);
 router.get('/books/related-books/:id', getRelatedBooks);
 router.get('/books/more-books-authors/:id', getMoreBooksAuthors);
+router.get('/books/most-viewed-books', getMostViewedBooks);
 router.get('/book/path/:pathUrl', getPathUrlBooks);
 router.get('/book/:id', getOneBooks);
 router.post('/book/post', postBooks);
